# libRealSpace

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.txt  main.cpp  vcpkg-configuration.json  vcpkg.json
SC/: SC.vcxproj  SC.vcxproj.filters
doc/: A Quick Introduction to IFF.txt  C130_LZW_PACKED.c  C130_LZW_UNPACK.c  MIDGAMES.md  PROG_OPCOD.md  STRIKE.wopl  cheatcodes.txt  classDiagram.mmd  draw_obj.txt  hack_list.txt  mauritania_tri_block242.md  mauritania_tri_block41.md  mission1a-LOAD.md  opcodes.xlsx  p1_tre_format.txt  sc_highlevel_architecture.txt  sc_map_format.txt  strike_commander_animation_format.txt  strike_commander_conversation_format.txt  strike_commander_ia_format.txt  strike_commander_jet_format.txt  strike_commander_map_format.txt  strike_commander_map_texture_format.txt  strike_commander_palette_format.txt  strike_commander_tre_content.txt  strike_commander_xmi_notes.txt  techdoc.md  wc1g.txt  wc4_opcodes.txt
doc/jdynn_data/: 747.REAL.OBJT.JETP.DYNM.JDYN.csv  747.REAL.OBJT.JETP.DYNM.THRS.csv  A-10.REAL.OBJT.JETP.DYNM.JDYN.csv  A-10.REAL.OBJT.JETP.DYNM.THRS.csv  C130DES.REAL.OBJT.JETP.DYNM.JDYN.csv  C130DES.REAL.OBJT.JETP.DYNM.THRS.csv  F-15.REAL.OBJT.JETP.DYNM.JDYN.csv  F-15.REAL.OBJT.JETP.DYNM.THRS.csv  F-16DES.REAL.OBJT.JETP.DYNM.JDYN.csv  F-16DES.REAL.OBJT.JETP.DYNM.THRS.csv  F-16GRAY.REAL.OBJT.JETP.DYNM.JDYN.csv  F-16GRAY.REAL.OBJT.JETP.DYNM.THRS.csv  F-18.REAL.OBJT.JETP.DYNM.JDYN.csv  F-18.REAL.OBJT.JETP.DYNM.THRS.csv  F-22.REAL.OBJT.JETP.DYNM.JDYN.csv  F-22.REAL.OBJT.JETP.DYNM.THRS.csv  F-4.REAL.OBJT.JETP.DYNM.JDYN.csv  F-4.REAL.OBJT.JETP.DYNM.THRS.csv  LEARJET.REAL.OBJT.JETP.DYNM.JDYN.csv  (+15 more)
librealspace/: IFFSaxLexer.cpp  IFFSaxLexer.h  RSGameflow.cpp  RSGameflow.h  RSOption.h  RSOptions.cpp  librealspace.sln  librealspace.vcxproj  librealspace.vcxproj.filters  main.cpp
macosx/: Camera.cpp
scripts/: gameflow_parsed.txt  list_opcode.txt  mission_instant.txt  mission_instant_search_and_destroy.txt  mission_misn1A.txt  mission_misn1B.txt  mission_misn1C.txt  mission_misn2A.txt  mission_misn3A.txt  mission_misn6X.txt  mission_parsed.txt  mission_parsed3.txt  mission_template.txt  missiopn_parsed8A.txt  missiopn_parsed8A_CD.txt  missiopn_parsed8X.txt  pars_jdyn.py  parse_adl.py  parse_gameflow.py  parse_iff.py  parse_jdyn.py  parse_mission.py  parse_real_weapons.py  parse_shp.py  parsed_world_file.txt  test_missil_guidance.py  test_missil_guidance_2.py  weapon_parse_20mm.txt  weapon_parse_aim9j.txt  weapon_parse_durandal.txt  weapon_parse_lau.txt  weapon_parse_mk20.txt  weapon_parse_mk82.txt
src/: AssetManager.cpp  AssetManager.h  Base.cpp  Base.h  ByteSlice.cpp  ByteSlice.h  ByteStream.cpp  ByteStream.h  CMakeLists.txt  Camera.cpp  Camera.h  Command.h  FrameBuffer.cpp  FrameBuffer.h  IFFChunkReader.cpp  IFFChunkReader.h  IFFChunkReaderPalette.cpp  IFFChunkReaderPalette.h  IFFObjectReader.cpp  IFFObjectReader.h  IFFReader.cpp  IFFReader.h  IFFSaxLexer.cpp  IFFSaxLexer.h  IffLexer.cpp  IffLexer.h  LZBuffer.cpp  LZBuffer.h  Math.cpp  Math.h  Maths.h  Matrix.cpp  Matrix.h  PakArchive.cpp  PakArchive.h  Quaternion.cpp  Quaternion.h  RLECodex.cpp  RLECodex.h  RLEShape.cpp  (+76 more)
src/commons/: CMakeLists.txt  IFFSaxLexer.cpp  IFFSaxLexer.h  IffLexer.cpp  LZBuffer.cpp  LZBuffer.h  Math.cpp  Maths.h  Matrix.h  Quaternion.h  RLEBuffer.cpp  RLEBuffer.h  md5.h
src/engine/: CMakeLists.txt  Camera.cpp  Camera.h  EventManager.cpp  EventManager.h  FrameBuffer.cpp  FrameBuffer.h  GameEngine.cpp  GameEngine.h  IActivity.cpp  IActivity.h  InputActionSystem.cpp  InputActionSystem.h  Loader.cpp  Loader.h  Maths.h  Matrix.cpp  Quaternion.h  RSMixer.cpp  RSMixer.h  RSScreen.cpp  RSScreen.h  RSVGA.cpp  RSVGA.h  SCButton.cpp  SCButton.h  SCMouse.cpp  SCMouse.h  SCRenderer.cpp  SCRenderer.h  SCZone.cpp  SCZone.h  Texture.cpp  Texture.h  keyboard.cpp  keyboard.h  precomp.h
src/executables/debugger/: CMakeLists.txt  DebugConvPlayer.cpp  DebugConvPlayer.h  DebugGame.cpp  DebugGame.h  DebugGameFlow.cpp  DebugGameFlow.h  DebugObjectViewer.cpp  DebugObjectViewer.h  DebugScreen.cpp  DebugScreen.h  DebugStrike.cpp  DebugStrike.h  main.cpp
src/executables/sc/: CMakeLists.txt  main.cpp  main.h
src/realspace/: AssetManager.cpp  AssetManager.h  Base.h  ByteStream.cpp  CMakeLists.txt  ConvAssetManager.cpp  ConvAssetManager.h  IffLexer.h  PakArchive.cpp  PakArchive.h  RLEShape.cpp  RLEShape.h  RSArea.cpp  RSArea.h  RSCockpit.cpp  RSCockpit.h  RSEntity.cpp  RSEntity.h  RSFont.cpp  RSFont.h  RSGameflow.cpp  RSGameflow.h  RSHud.cpp  RSHud.h  RSImage.cpp  RSImage.h  RSImageSet.cpp  RSImageSet.h  RSMapTextureSet.cpp  RSMission.cpp  RSMission.h  RSMusic.cpp  RSMusic.h  RSNavMap.cpp  RSNavMap.h  RSObjviewer.cpp  RSObjviewer.h  RSOption.h  RSOptions.cpp  RSPalette.cpp  (+14 more)
src/sc/: AssetManager.cpp  AssetManager.h  CMakeLists.txt  ConvAssetManager.cpp  ConvAssetManager.h  GameEngine.cpp  GameEngine.h  IActivity.cpp  IActivity.h  SCAnimationPlayer.cpp  SCAnimationPlayer.h  SCButton.cpp  SCButton.h  SCCockpit.cpp  SCCockpit.h  SCConvPlayer.cpp  SCConvPlayer.h  SCDogFightMenu.cpp  SCDogFightMenu.h  SCFileRequester.cpp  SCFileRequester.h  SCGameFlow.cpp  SCGameFlow.h  SCMainMenu.cpp  SCMainMenu.h  SCMission.cpp  SCMission.h  SCMissionActors.cpp  SCMissionActors.h  SCMouse.cpp  SCMouse.h  SCNavMap.cpp  SCNavMap.h  SCObjectViewer.cpp  SCObjectViewer.h  SCPilot.cpp  SCPilot.h  SCPlane.cpp  SCPlane.h  SCProg.cpp  (+28 more)
src/strike_commander/: CMakeLists.txt  PaletteIDs.h  SCAnimationPlayer.cpp  SCAnimationPlayer.h  SCCockpit.cpp  SCCockpit.h  SCConvPlayer.cpp  SCConvPlayer.h  SCDogFightMenu.cpp  SCDogFightMenu.h  SCExplosion.cpp  SCExplosion.h  SCFileRequester.cpp  SCFileRequester.h  SCGameFlow.cpp  SCGameFlow.h  SCJdynPlane.cpp  SCJdynPlane.h  SCMainMenu.cpp  SCMainMenu.h  SCMission.cpp  SCMission.h  SCMissionActors.cpp  SCMissionActors.h  SCNavMap.cpp  SCNavMap.h  SCObjectViewer.cpp  SCObjectViewer.h  SCPilot.cpp  SCPilot.h  SCPlane.cpp  SCPlane.h  SCProg.cpp  SCRegister.cpp  SCRegister.h  SCScene.cpp  SCShot.cpp  SCShot.h  SCSimplePlane.cpp  SCSimplePlane.h  (+14 more)
src/to/: CMakeLists.txt  main.cpp
(+3 files in other folders)
